# veriwavex-beta

./: .gitignore  Cargo.toml  LICENSE  README.md  VeriWaveX_v1.1.0.iss  installer_script.iss  settings.json
src/: app.rs  logic.rs  main.rs  models.rs
src/ui/: about.rs  menu.rs  mod.rs  panels.rs  schematic.rs  wizards.rs
