[package]
name = "veriwavex-beta"
version = "0.1.0"
edition = "2024"

[dependencies]
# Upgrade eframe to stay in sync with the editor crate
eframe = "0.30" 
egui_code_editor = "0.2"
rfd = "0.12"
regex = "1.10"
# Keep winapi as is
winapi = { version = "0.3", features = ["winuser", "windef", "winbase"] }